<resources>
    <string name="app_name">VOA Offline</string>
    <string name="appSetting">Configuración App</string>
    <string name="denyPermissions">Usted ha denegado el permiso requerido. Por favor, conceda continuar."</string>
    <string name="appPermissionDenied1"> Has negado</string>
    <string name="appPermissionDenied2">algunos de los permisos requeridos, conceda el permiso para proceder."</string>
    <string name="netwotk_connected">Estas conectado a internet</string>
    <string name="netwotk_not_connected">No estas conectado a internet</string>
    <string name="user">Usuario</string>
    <string name="password">Clave</string>
    <string name="app_continue">continuar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">ok</string>
    <string name="error">error</string>
    <string name="ERROR">ERROR</string>
    <string name="alert">alerta</string>
    <string name="ALERT">ALERTA</string>
    <string name="omi_matricula">OMI/matricula</string>
    <string name="ws_connection_error">Ha ocurrido un error intenta más tarde</string>
    <string name="obligatory_field">Este campo es obligatorio</string>
    <string name="format_invalid">No es un formato valido</string>
    <string name="format_invalid_identificacion">Deben ser entre 6 y 10 dígitos</string>
    <string name="welcome_user">Bienvenido %s!</string>
    <string name="user_not_logged_in">Señor usuario, aún no ha iniciado sesión</string>
    <string name="sign_off">¿Está seguro de cerrar sesión? Recuerde que perderá los arribos que no se hayan sincronizado</string>
    <string name="title_activity_avisos">AvisosActivity</string>
    <string name="title_activity_avisos_arribo">AvisosArriboActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start_date">Fecha Inicial</string>
    <string name="end_date">Fecha Final</string>
    <string name="filter_empty">Debes seleccionar un filtro para continuar</string>
    <string name="avisos_arribo">Aviso de Arribo</string>
    <string name="movimiento_operativo">Movimiento Operativo</string>
    <string name="movimiento_administrativo">Movimiento Administrativo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numero_aviso">No aviso</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_arribo_internacional">ArriboInternacionalActivity</string>
    <string name="calado_popa">Calado popa</string>
    <string name="calado_proa">Calado proa</string>
    <string name="cantidad_carga">Cantidad carga</string>
    <string name="cantidad_pasajeros">Cantidad pasajeros</string>
    <string name="descripcion_estado">Estado</string>
    <string name="eslora_maxima">Eslora máxima</string>
    <string name="eta">ETA</string>
    <string name="fecha">Fecha aviso</string>
    <string name="fecha_hora_libre_platica">Fecha y hora</string>
    <string name="fecha_hora_visita">Fecha hora visita</string>
    <string name="mercancias_peligrosas">Mercancías peligrosas</string>
    <string name="nit_agencia">Agencia Marítima</string>
    <string name="nombre_capitan_nave">Nombre capitán</string>
    <string name="nombre_nave">Nombre nave</string>
    <string name="nombre_puerto_destino">Puerto destino</string>
    <string name="numero_pasajeros_trancito">N° de pasajeros en tránsito</string>
    <string name="observaciones">Observaciones</string>
    <string name="pais">País</string>
    <string name="puerto_procedencia">Puerto procedencia</string>
    <string name="razon_social">Razón social</string>
    <string name="tipo_buque">Tipo buque</string>
    <string name="tipo_carga">Tipo carga</string>
    <string name="trb">Trb</string>
    <string name="tripulacion_arribo">Tripulación arribo</string>
    <string name="trn">Trn</string>
    <string name="piloto_practico">Nombre piloto</string>
    <string name="piloto_entrenamiento">Piloto en entrenamiento</string>
    <string name="piloto_entrenamiento_atraque">Nombre piloto en entrenamiento</string>
    <string name="piloto_atraque">Nombre piloto</string>
    <string name="lancha_transporte_piloto">Lancha transporte piloto</string>
    <string name="instalacion_portuaria">Instalación portuaria</string>
    <string name="remolcador">Remolcador</string>
    <string name="fecha_hora_arribo">Fecha y hora arribo</string>
    <string name="fecha_hora_atraque">Fecha hora atraque</string>
    <string name="fecha_hora_inicio_maniobra_atraque">Fecha hora inicio maniobra atraque</string>
    <string name="fecha_hora_fin_maniobra_atraque">Fecha hora fin maniobra atraque</string>
    <string name="fecha_hora_piloto_abordo_reporte">Fecha y hora piloto abordo</string>
    <string name="si_libre_platica">Si libre platica</string>
    <string name="arribo">arribo</string>
    <string name="fecha_hora_area_control">Fecha y hora área control</string>
    <string name="atraque_fondeo">Atraque/fondeo</string>
    <string name="libre_platica">Libre platica</string>
    <string name="firmas">Firmas</string>
    <string name="firma">Firma</string>
    <string name="clear_pad">Limpiar</string>
    <string name="save_signature">Guardar</string>
    <string name="representante">Funcionario</string>
    <string name="identificacion_representante">Identificación funcionario</string>
    <string name="email_representante">Email funcionario</string>
    <string name="nombre_representante">Nombres y Apellidos funcionario</string>
    <string name="fecha_arribo">Fecha arribo</string>
    <string name="datos_nave">Datos de la nave</string>
    <string name="bandera">Bandera</string>
    <string name="ab">AB</string>
    <string name="an">AN</string>
    <string name="datos_movimiento">Datos del movimiento</string>
    <string name="calado_maximo">Calado máximo actual</string>
    <string name="razon_arribo">Razón de Arribo</string>
    <string name="muelle">Muelle</string>
    <string name="visitada">Visitado</string>
    <string name="error_arribo_operativo">No has completado el movimiento operativo</string>
    <string name="error_arribo_administrativo">No has completado el movimiento administrativo</string>
    <string name="info_guardar_arribo">¿Está seguro de guardar la información? después no podrá modificarla</string>
    <string name="exito_guardar_arribo">Se ha almacenado con éxito el arribo %s</string>
    <string name="error_voa_pdf">Ocurrió un error al generar el PDF. Intente guardar nuevamente.</string>
    <string name="exito_voa_pdf">Busque en la carpeta descargas el pdf de este arribo %s.</string>
    <string name="not_found_voa_pdf">No se encontró el PDF para el arribo %s</string>
    <string name="synchronize">Sincronizar</string>
    <string name="label_sign_off">Cerrar sesión</string>
    <string name="label_sign_off_delete_info">Borrar datos y salir</string>
    <string name="signatures_error">No has completado las firmas de los funcionarios, debe ser como mínimo 1</string>
    <string name="signatur_error">Debes diligenciar la firma</string>
    <string name="save_info_error">Ocurrió un error almacenando la información, intente nuevamente</string>
    <string name="empty_info_error">No se encontraron avisos para sus criterios de búsqueda. Intente nuevamente.</string>
    <string name="empty_arribos_error">No se encontraron arribos para sincronizar.</string>
    <string name="saved">Guardado</string>
    <string name="dont_save">No Guardado</string>
    <string name="loading_please_wait">Cargando, por favor espere...</string>
    <string name="end_date_error">La fecha final no puede ser menor que la inicial</string>
    <string name="spnPilotoAsistentsAtraque">Piloto Asistente</string>
    <string name="piloto_asistente">Piloto asistente</string>
    <string name="remolcadores">Remolcadores</string>

</resources>
