<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:layout_editor_absoluteY="32dp">

    <TableRow
        android:id="@+id/pdfHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sectionHeader"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/escudo_dimar_sin_fondo_baja_resolucion"
            android:orientation="vertical"></LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/pdfAviso"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero_aviso"
                    android:text="@string/numero_aviso" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtPdfAviso"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:padding="5px"
                android:text="text"
                android:textColor="#005500"
                android:textSize="26sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/arribo"
                    android:text="@string/arribo" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtPdfArribo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5px"
                android:text="text"
                android:textColor="#005500"
                android:textSize="26sp" />



        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/pdfAviso2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fecha_arribo"
                    android:text="@string/fecha_arribo" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtPdfFechaArriboZarpe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/fecha_hora_visita"
                    android:text="@string/fecha_hora_visita" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtPdfFechaHoraVisita"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/pdfShipData"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtPdfShipData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/datos_nave" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/omi_matricula"
                            android:text="@string/omi_matricula" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/txtPdfOmi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombre_nave"
                            android:text="@string/nombre_nave" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/txtPdfNombreNave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="text" />

                </TableRow>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/bandera"
                            android:text="@string/bandera" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/txtPdfBandera"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ab"
                            android:text="@string/ab" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/txtPdfAB"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/an"
                            android:text="@string/an" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/txtPdfAN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableRow>


        </TableLayout>
    </TableRow>

    <TableRow
        android:id="@+id/pdfMovementData"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtPdfMovementData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datos_movimiento" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:hint="@string/nit_agencia"
                            android:text="@string/nit_agencia" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/txtPdfAgencia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="tesxt " />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/nombre_capitan_nave" />

                    <TextView
                        android:id="@+id/txtPdfNombreCapitan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calado_popa"
                        android:text="@string/calado_popa" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="TextView" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calado_proa"
                        android:text="@string/calado_proa" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="TextView" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calado_maximo"
                        android:text="@string/calado_maximo" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="TextView" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableLayout>
    </TableRow>
</TableLayout>
