<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.cabotage.AvisoArriboCabotajeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textLabelThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/avisos_arribo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:background="@drawable/rectangle_background"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:theme="@style/textLabel"
                                android:weightSum="0.5">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtNumAviso"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:focusable="false"
                                    android:hint="@string/numero_aviso" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="0.5"
                                android:theme="@style/textLabel"
                                android:weightSum="0.5">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtOmiMatricula"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:focusable="false"
                                    android:hint="@string/omi_matricula" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/textLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtNombreNave"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:focusable="false"
                                android:hint="@string/nombre_nave" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/textLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtRazonSocial"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:focusable="false"
                                android:hint="@string/razon_social" />
                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:theme="@style/textLabel">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtPuertoProcedencia"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:focusable="false"
                                    android:hint="@string/puerto_procedencia" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:theme="@style/textLabel">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtNombrePuertoDestino"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:focusable="false"
                                    android:hint="@string/nombre_puerto_destino" />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:theme="@style/textLabel">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtFecha"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:focusable="false"
                                    android:hint="@string/fecha" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:theme="@style/textLabel">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtEta"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:focusable="false"
                                    android:hint="@string/eta" />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>